# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ios/asset_catalog.gni")

imageset("content_suggestions_no_image") {
  sources = [
    "content_suggestions_no_image.imageset/Contents.json",
    "content_suggestions_no_image.imageset/content_suggestions_no_image.png",
    "content_suggestions_no_image.imageset/content_suggestions_no_image@2x.png",
    "content_suggestions_no_image.imageset/content_suggestions_no_image@3x.png",
  ]
}

imageset("content_suggestions_offline") {
  sources = [
    "content_suggestions_offline.imageset/Contents.json",
    "content_suggestions_offline.imageset/content_suggestions_offline.png",
    "content_suggestions_offline.imageset/content_suggestions_offline@2x.png",
    "content_suggestions_offline.imageset/content_suggestions_offline@3x.png",
  ]
}

imageset("ntp_search_icon") {
  sources = [
    "ntp_search_icon.imageset/Contents.json",
    "ntp_search_icon.imageset/ntp_search_icon.png",
    "ntp_search_icon.imageset/ntp_search_icon@2x.png",
    "ntp_search_icon.imageset/ntp_search_icon@3x.png",
  ]
}


imageset("mises_welcome") {
  sources = [
    "mises_welcome.imageset/Contents.json",
    "mises_welcome.imageset/mises_welcome.png",
    "mises_welcome.imageset/mises_welcome@2x.png",
    "mises_welcome.imageset/mises_welcome@3x.png",
  ]
}